Исправил баги, заменил словарь слов, добавил выбор файла в интерфейсе для брутфорса